# gestor

./: .gitignore  README.md  local.yml  manage.py  production.yml  pyproject.toml  setup.cfg
.envs/.local/: .django  .postgres
.github/: dependabot.yml
.github/workflows/: ci.yml
compose/production/traefik/: traefik.yml
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
requirements/: base.txt  local.txt
server_sales_manager/: conftest.py
server_sales_manager/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
server_sales_manager/static/css/: style.css
server_sales_manager/templates/: base.html  base_backup.html  index.html
server_sales_manager/users/: admin.py  apps.py  models.py  urls.py
server_sales_manager/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
